--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           mkdir -p /tmp/package
           cp -R .sourceknight/package/* /tmp/package
+          cp -R sound/* /tmp/package/sound/
 
       - name: Upload build archive for test runners
         uses: actions/upload-artifact@v3
